--- a/Finance/finance.html
+++ b/Finance/finance.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -31,7 +32,7 @@
 </button>
 <!--**************************************BACK TO TOP BUTTON END***********************************************--> 
 
-
+ 
 <!--**************************************NAVIGATION BAR & HERO BEGIN***********************************************--> 
 <div class="parallax">
   <img class="bg-img" src="../images/art-15.jpg" alt="background image">  
@@ -70,25 +71,25 @@
                 </div>
               </li>
               <li class="dropdown">
-                  <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
+                  <a class="dropbtn" href="../SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
                   <div class="dropdown-content">
-                      <a href="#">Mental</a>
-                      <a href="#">Physical</a>
-                      <a href="#">Personal Style</a>
-                      <a href="#">Hygiene</a>
-                      <a href="#">Resources</a>
+                      <a href="../SelfCare/mental.html">Mental</a>
+                      <a href="../SelfCare/physical.html">Physical</a>
+                      <a href="../SelfCare/personalstyle.html">Personal Style</a>
+                      <a href="../SelfCare/hygiene.html">Hygiene</a>
+                      <a href="../SelfCare/resources.html">Resources</a>
                   </div>
               </li>
               <li class="dropdown">
-                  <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
+                  <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                   <div class="dropdown-content">
-                      <a href="#">Relationships</a>
-                      <a href="#">Friendships</a>
-                      <a href="#">Social Etiquette</a>
-                      <a href="#">Social Media</a>
+                      <a href="../SocialLife/relationship.html">Relationships</a>
+                      <a href="../SocialLife/friendships.html">Friendships</a>
+                      <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                      <a href="../SocialLife/socialmedia.html">Social Media</a>
                   </div>
               </li>
-              <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+              <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
           </ul>
           </div>
       </div>
@@ -106,7 +107,7 @@
             <h4 class="display-3" style="letter-spacing: 6px; color: #53260f;">Finance</h4>
               <p class="text-white" style="font-size: 20px;">
                   Unfortunately, one thing we all know is how much money influences the world. But did you know that <a href="https://www.ipsos.com/en-us/news-polls/money-masters-financial-literacy#:~:text=Over%20one%20in%20three%20Americans%20are%20not%20considered%20financially%20literate%20%7C%20Ipsos">
-                    One</a> in three U.S. citizens are financially iliterate? We are a developed country, how can this be? 
+                    one</a> in three U.S. citizens are financially iliterate? We are a developed country, how can this be? 
                   <br><br>
                   Well, let's change that and get educated on the basics.
               </p>
