--- a/Finance/insurance.html
+++ b/Finance/insurance.html
@@ -25,7 +25,7 @@
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#toc">
-
+  
 <!--**************************************BACK TO TOP BUTTON BEGIN***********************************************--> 
 <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top" style="background-color: #1b1363; box-shadow: inset;">
     <i class="fa-solid fa-arrow-up-from-bracket" style="color: white;"></i>
@@ -59,34 +59,35 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Finance/finance.html"><span class="glyphicon"></span>FINANCE</a>
+                  <a class="dropbtn" href="../Finance/finance.html"><span class="glyphicon"></span>FINANCE</a>
+                  <div class="dropdown-content">
+                      <a href="../Finance/bankaccount.html">Bank Accounts</a>
+                      <a href="../Finance/budgeting.html">Budgeting</a>
+                      <a href="../Finance/insurance.html">Insurance</a>                        
+                      <a href="../Finance/renting.html">Rent & Buy</a>                        
+                      <a href="../Finance/taxes.html">Taxes</a>
+                  </div>
+                </li>
+                <li class="dropdown">
+                    <a class="dropbtn" href="../SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
                     <div class="dropdown-content">
-                        <a href="../Finance/bankaccount.html">Bank Accounts</a>
-                        <a href="../Finance/budgeting.html">Budgeting</a>
-                        <a href="../Finance/insurance.html">Insurance</a>                        
-                        <a href="../Finance/renting.html">Rent & Buy</a>                        
-                        <a href="../Finance/taxes.html">Taxes</a>
+                        <a href="../SelfCare/mental.html">Mental</a>
+                        <a href="../SelfCare/physical.html">Physical</a>
+                        <a href="../SelfCare/personalstyle.html">Personal Style</a>
+                        <a href="../SelfCare/hygiene.html">Hygiene</a>
+                        <a href="../SelfCare/resources.html">Resources</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
+                    <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                     <div class="dropdown-content">
-                        <a href="#">Mental</a>
-                        <a href="#">Physical</a>
-                        <a href="#">Hygiene</a>
-                        <a href="#">Resources</a>
+                        <a href="../SocialLife/relationship.html">Relationships</a>
+                        <a href="../SocialLife/friendships.html">Friendships</a>
+                        <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                        <a href="../SocialLife/socialmedia.html">Social Media</a>
                     </div>
                 </li>
-                <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
-                    <div class="dropdown-content">
-                        <a href="#">Relationships</a>
-                        <a href="#">Friendships</a>
-                        <a href="#">Social Etiquette</a>
-                        <a href="#">Social Media</a>
-                    </div>
-                </li>
-                <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+                <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
             </ul>
             </div>
         </div>
@@ -177,8 +178,9 @@
                 </dl>
                 
                 <p>Of course, there are many terms associated with insurance, however, it’s best to not overwhelm you with so much insurance information, so, let’s just leave it at that.</p>
-            
-            <h3 class="section-heading">Types of Insurance</h3>
+            <img src="../images/healthcare-img.jpg" alt="doctor">
+
+            <h3 class="section-heading"><br>Types of Insurance</h3>
 
                 <h4 class="section-heading">Car Insurance</h4>
                     <p>
@@ -201,7 +203,7 @@
                     <p>
                         Health Insurance is a bit more complicated but very important. Anything can happen. A bug bite can make you paralyzed, a stint with the flu can alter your 
                         entire immune system. The fact is, our health can change drastically and randomly, so it’s best to be insured. 
-                        Read<link> this story about a woman whose entire life changed from something that was out of her control.  
+                        <a href="https://www.theguardian.com/us-news/2019/nov/14/health-insurance-medical-bankruptcy-debt">Read</a> this story about a woman whose entire life changed from something that was out of her control.  
                     </p>
                     <p>
                         With health insurance, you can get preventative care, including vaccines and checkups, and pay significantly less money than someone who is not insured. 
@@ -221,7 +223,7 @@
                         Like the above-mentioned insurance types, dental insurance operates pretty much the same way, but for your teeth and mouth.  
                     </p>
                     <p>
-                        Dental insurance companies typically cover preventative, basic and major care. According to Humana<link>  most plans cover 100/80/50,
+                        Dental insurance companies typically cover preventative, basic and major care. According to <a href="https://www.humana.com/dental-insurance/dental-resources/how-does-dental-insurance-work">Humana</a> most plans cover 100/80/50,
                         meaning your preventative care is fully covered, basic care is 80% covered, and any major care services are 50% covered.  
                     </p>
                     <p>
