--- a/HouseKeeping/daily.html
+++ b/HouseKeeping/daily.html
@@ -4,25 +4,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Website Title and Logo-->
+    <!------------------------------- Website Title and Logo -------------------------->
 	  <title>Daily Tasks</title>
 
-    <!-- Links for Content Design-->
+    <!----------------------------- Links for Content Design -------------------------->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" >
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <link rel="shortcut icon" href="../images/GPLogo.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="images/GPLogo.ico" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="../css/general.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <!-- Links for Content Funtionality and Icons-->  
+    <!---------------------------- Links for Content Funtionality and Icons------------>  
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.rawgit.com/afeld/bootstrap-toc/v1.0.1/dist/bootstrap-toc.min.js"></script>
         <script src="https://kit.fontawesome.com/92e37675b9.js" crossorigin="anonymous"></script>
 </head>
+
 <body data-bs-spy="scroll" data-bs-target="#toc">
 
 <!--**************************************BACK TO TOP BUTTON BEGIN***********************************************--> 
@@ -68,25 +69,25 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
+                    <a class="dropbtn" href="../SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
                     <div class="dropdown-content">
-                        <a href="#">Mental</a>
-                        <a href="#">Physical</a>
-                        <a href="#">Personal Style</a>
-                        <a href="#">Hygiene</a>
-                        <a href="#">Resources</a>
+                        <a href="../SelfCare/mental.html">Mental</a>
+                        <a href="../SelfCare/physical.html">Physical</a>
+                        <a href="../SelfCare/personalstyle.html">Personal Style</a>
+                        <a href="../SelfCare/hygiene.html">Hygiene</a>
+                        <a href="../SelfCare/resources.html">Resources</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
+                    <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                     <div class="dropdown-content">
-                        <a href="#">Relationships</a>
-                        <a href="#">Friendships</a>
-                        <a href="#">Social Etiquette</a>
-                        <a href="#">Social Media</a>
+                        <a href="../SocialLife/relationship.html">Relationships</a>
+                        <a href="../SocialLife/friendships.html">Friendships</a>
+                        <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                        <a href="../SocialLife/socialmedia.html">Social Media</a>
                     </div>
                 </li>
-                <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+                <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
             </ul>
             </div>
         </div>
@@ -134,7 +135,7 @@
 
                 <p>If you live in a space that has a dishwasher, take advantage of it. 
                     You can rinse your dishes off, and place them in the washer, and run them once a week, like on a Saturday night, and unload them on a Sunday.
-                    If not, that’s okay! Invest in a <link> dish dryer countertop<link>. These things will save your life. Find a place in the kitchen and dry any used dishes there.
+                    If not, that’s okay! Invest in a dish dryer countertop. These things will save your life. Find a place in the kitchen and dry any used dishes there.
                     You can also grab the clean ones on the go too. </p>
                 <p>To wash your dishes, you need: </p>
                 <ul>
@@ -157,7 +158,8 @@
                                 <li><strong>WASH DISHES</strong> - For practice, wash each dish for about 5 seconds, using the tougher side of the scrubber to get rid of tough stains and the softer side to smooth it out. </li>
                                 <li><strong>PRESERVE WATER</strong> - Make sure you do not keep the water running, so, as mentioned earlier, pick where you want to start. You can do one of two things: </li>
                                 <ul class="list-group list-group-flush">   
-                                    <li class="list-group-item" style="margin-left: 50px;">1. Wash your cups, then rinse. Wash your plates, then rinse, or wash your utensils then rinse. (This method frees up space, so your dishes aren’t cluttering up in one spot)</li>
+                                    <li class="list-group-item" style="margin-left: 50px;">1. Wash your cups, then rinse. Wash your plates, then rinse, or wash your utensils then rinse.
+                                         (This method frees up space, so your dishes aren’t cluttering up in one spot)</li>
                                     <li class="list-group-item" style="margin-left: 50px;">2. Wash everything all at once, and rinse everything all at once. </li>
                                 </ul> 
                                 <li><strong>RINSE YOUR DISHES</strong> - When rinsing your dishes, make sure you are not doing it with sudsy hands. Rinse off your hands and then rinse off your dishes.</li>
@@ -171,7 +173,8 @@
 
             <h2 class="section-heading">Make Your Bed</h2>
 
-                <p>It takes roughly 5 minutes to place your bed together.  When you wake up, remove your pillows, fluff your bed to get rid of dead skin and neatly tuck your sheets. Fluff your pillows (this is my favorite part of cleaning the bed as I take any frustrations out on my pillow)
+                <p>It takes roughly 5 minutes to place your bed together.  When you wake up, remove your pillows, fluff your bed to get rid of dead skin and neatly tuck your sheets. Fluff your pillows (this is my favorite part of 
+                    cleaning the bed as I take any frustrations out on my pillow)
                     and place them back on top of your bed.</p>
                 <p>Optional – spray some Febreze furniture spray on your bed, so when you are going to sleep, you are getting into a neat, nice smelling bed. Also helps when you have special company over, if you know what I mean.</p>
                 <p>Check out this video!<br></p>
@@ -179,9 +182,11 @@
 
             <h2 class="section-heading"><br>Wipe Your Countertop</h2>
 
-                <p>When you use the bathroom, whether to wash your face or your hands, you can easily overlook the water that drips all over the countertops. If you don’t intervene at that time, the water droplets will dry on your countertops and make it look unclean and gross. </p>
-                <p>If you designate a rag that is just for cleaning your countertops, it can save you a lot of headache. Have one for the kitchen and one for the bathroom, so there is no overlap. When you finish washing your hands, dishes, or face, pick up the rag and wipe the countertops clean.
-                    For actual stains, get some <link> all purpose cleaner<link>, spray your rag, and wipe up the stain.</p>
+                <p>When you use the bathroom, whether to wash your face or your hands, you can easily overlook the water that drips all over the countertops. If you don’t intervene at that time, the water droplets will dry on your 
+                    countertops and make it look unclean and gross. </p>
+                <p>If you designate a rag that is just for cleaning your countertops, it can save you a lot of headache. Have one for the kitchen and one for the bathroom, so there is no overlap. When you finish washing your hands,
+                     dishes, or face, pick up the rag and wipe the countertops clean.
+                    For actual stains, get some all purpose cleaner, spray your rag, and wipe up the stain.</p>
             <br>
             <br>
 
@@ -233,21 +238,21 @@
 <div class="container-fluid" style="background-color: #f89421; font-family: 'Montserrat', serif;">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-white">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
+        <li class="nav-item"><a href="../home.html" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
+        <li class="nav-item"><a href="../about.html" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
+        <li class="nav-item"><a href="../HouseKeeping/housekeeping.html" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
+        <li class="nav-item"><a href="../Finance/finance.html" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
+        <li class="nav-item"><a href="../SelfCare/selfcare.html" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
+        <li class="nav-item"><a href="../SocialLife/sociallife.html" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
+        <li class="nav-item"><a href="../contact.html" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
       </ul>
       <p class="text-center text-white">&copy; 2024 Copyright: 
-          <a href="home.html"> mygrowingpains.com</a></p>
+          <a href="../home.html"> mygrowingpains.com</a></p>
     </footer>
-  </div>    
+</div>    
 <!--******************************************FOOTER END****************************************************-->
   
-  <script>
+<script>
   //****************** NAVBAR SCROLL FUNCTION **************************//
   const navEl = document.querySelector('.navbar');
   
@@ -285,5 +290,6 @@
     document.documentElement.scrollTop = 0;
   }
 </script>
+
 </body>
 </html>
