--- a/HouseKeeping/housekeeping.html
+++ b/HouseKeeping/housekeeping.html
@@ -70,25 +70,25 @@
                 </div>
             </li>
               <li class="dropdown">
-                  <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
+                  <a class="dropbtn" href="../SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
                   <div class="dropdown-content">
-                      <a href="#">Mental</a>
-                      <a href="#">Physical</a>
-                      <a href="#">Personal Style</a>
-                      <a href="#">Hygiene</a>
-                      <a href="#">Resources</a>
+                      <a href="../SelfCare/mental.html">Mental</a>
+                      <a href="../SelfCare/physical.html">Physical</a>
+                      <a href="../SelfCare/personalstyle.html">Personal Style</a>
+                      <a href="../SelfCare/hygiene.html">Hygiene</a>
+                      <a href="../SelfCare/resources.html">Resources</a>
                   </div>
               </li>
               <li class="dropdown">
-                  <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
+                  <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                   <div class="dropdown-content">
-                      <a href="#">Relationships</a>
-                      <a href="#">Friendships</a>
-                      <a href="#">Social Etiquette</a>
-                      <a href="#">Social Media</a>
+                      <a href="../SocialLife/relationship.html">Relationships</a>
+                      <a href="../SocialLife/friendships.html">Friendships</a>
+                      <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                      <a href="../SocialLife/socialmedia.html">Social Media</a>
                   </div>
               </li>
-              <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+              <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
           </ul>
           </div>
       </div>
@@ -133,7 +133,7 @@
                       Check out this list of things you can accomplish every single day without taking all of your time.
                      <br>
                     </p>
-                    <a href="daily.html" class="btn btn-two text-white" style="background-color: #1b1363;">LET'S GO!</a>
+                    <a href="../HouseKeeping/daily.html" class="btn btn-two text-white" style="background-color: #1b1363;">LET'S GO!</a>
                   </div>
                 </div>
               </div>
@@ -150,7 +150,7 @@
                           These tasks might take a bit of time, but hey don't worry! It's all worth it in the end!
                           <br>
                           </p>
-                        <a href="weekly.html" class="btn btn-two text-white" style="background-color: #1b1363;">LET'S GO!</a>
+                        <a href="../HouseKeeping/weekly.html" class="btn btn-two text-white" style="background-color: #1b1363;">LET'S GO!</a>
                   </div>
                 </div>
               </div>
@@ -167,7 +167,7 @@
                           Now these tasks can be the most time-consuming, so free up your schedule, open your windows, and play some of your favorite music!
                         <br>
                         </p>
-                        <a href="monthly.html" class="btn btn-two text-white" style="background-color: #1b1363;">LET'S GO!</a>
+                        <a href="../HouseKeeping/monthly.html" class="btn btn-two text-white" style="background-color: #1b1363;">LET'S GO!</a>
                   </div>
                 </div>
               </div>
@@ -181,16 +181,16 @@
 <div class="container-fluid" style="background-color: #f89421; font-family: 'Montserrat', serif;">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-white">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
+      <li class="nav-item"><a href="../home.html" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
+      <li class="nav-item"><a href="../about.html" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
+      <li class="nav-item"><a href="../HouseKeeping/housekeeping.html" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
+      <li class="nav-item"><a href="../Finance/finance.html" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
+      <li class="nav-item"><a href="../SelfCare/selfcare.html" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
+      <li class="nav-item"><a href="../SocialLife/sociallife.html" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
+      <li class="nav-item"><a href="../contact.html" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
     </ul>
     <p class="text-center text-white">&copy; 2024 Copyright: 
-        <a href="home.html"> mygrowingpains.com</a></p>
+        <a href="../home.html"> mygrowingpains.com</a></p>
   </footer>
 </div>    
 <!--******************************************FOOTER END****************************************************-->
