--- a/HouseKeeping/monthly.html
+++ b/HouseKeeping/monthly.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!------------------------------- Website Title and Logo -------------------------->
-	  <title>My Growing Pains</title>
+	  <title>Monthly Tasks</title>
 
     <!----------------------------- Links for Content Design -------------------------->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" >
@@ -68,31 +68,31 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
+                    <a class="dropbtn" href="../SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
                     <div class="dropdown-content">
-                        <a href="#">Mental</a>
-                        <a href="#">Physical</a>
-                        <a href="#">Personal Style</a>
-                        <a href="#">Hygiene</a>
-                        <a href="#">Resources</a>
+                        <a href="../SelfCare/mental.html">Mental</a>
+                        <a href="../SelfCare/physical.html">Physical</a>
+                        <a href="../SelfCare/personalstyle.html">Personal Style</a>
+                        <a href="../SelfCare/hygiene.html">Hygiene</a>
+                        <a href="../SelfCare/resources.html">Resources</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
+                    <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                     <div class="dropdown-content">
-                        <a href="#">Relationships</a>
-                        <a href="#">Friendships</a>
-                        <a href="#">Social Etiquette</a>
-                        <a href="#">Social Media</a>
+                        <a href="../SocialLife/relationship.html">Relationships</a>
+                        <a href="../SocialLife/friendships.html">Friendships</a>
+                        <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                        <a href="../SocialLife/socialmedia.html">Social Media</a>
                     </div>
                 </li>
-                <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+                <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
             </ul>
             </div>
         </div>
     </nav> 
     <br>
-</div>  
+</div>   
 <!--**************************************NAVIGATION BAR & HERO END*************************************************--> 
 
 
@@ -127,7 +127,7 @@
                     <li class="list-group-item">7. Inspect Everything</li>
                   </ul>
             <h2 class="section-heading">Dust, Dust, Dust</h2>
-                <p>According to the National Center for Healthy Housing <link>, dust can be a detrimental to your overall health, as it can cause a myriad of problems such as asthma or even lead poisoning. 
+                <p>According to the<a href="https://nchh.org/information-and-evidence/learn-about-healthy-housing/health-hazards-prevention-and-solutions/dust/#:~:text=Exposure%20to%20dust%20inside%20homes,in%20through%20windows%20and%20doors."> National Center for Healthy Housing</a>, dust can be a detrimental to your overall health, as it can cause a myriad of problems such as asthma or even lead poisoning. 
                     I myself am allergic to house dust, so you can already guess, I take thorough measures to make sure there is little dust accumulating in my home. </p>
                 <p>Dust your fans, the top of your fridge, tops of exposed cabinets, and the baseboards. Get a Swiffer duster and get to work.
                     Make sure you dust all of your lights as well as your sprinklers.
@@ -145,7 +145,7 @@
 
             <h2 class="section-heading">Organize Your Pantry</h2>
 
-                <p>I am guilty of not looking into my cabinets and cleaning them. I recently learned that, yes, spices do in fact expire<link> . The last time I cleaned my pantry, I found out my honey spilled,
+                <p>I am guilty of not looking into my cabinets and cleaning them. I recently learned that, yes, spices do in fact <a href="https://www.webstaurantstore.com/blog/3076/do-spices-expire.html#:~:text=Spices%20do%20not%20expire%20in,they%20pass%20their%20peak%20freshness.">expire</a> . The last time I cleaned my pantry, I found out my honey spilled,
                     my 3rd bottle of honey mind you, and had made my shelf very sticky. Cleaning that was the most miserable experience I have ever had. It took forever.
                 </p>
                 <p>So, do not neglect your pantry and your cabinets. Ask yourself, do I need this condiment? Do I need 4 bottles of the same spice that I don’t use?  What do you need to stock up on? 
@@ -233,21 +233,21 @@
 <div class="container-fluid" style="background-color: #f89421; font-family: 'Montserrat', serif;">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-white">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
+        <li class="nav-item"><a href="../home.html" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
+        <li class="nav-item"><a href="../about.html" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
+        <li class="nav-item"><a href="../HouseKeeping/housekeeping.html" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
+        <li class="nav-item"><a href="../Finance/finance.html" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
+        <li class="nav-item"><a href="../SelfCare/selfcare.html" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
+        <li class="nav-item"><a href="../SocialLife/sociallife.html" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
+        <li class="nav-item"><a href="../contact.html" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
       </ul>
       <p class="text-center text-white">&copy; 2024 Copyright: 
-          <a href="home.html"> mygrowingpains.com</a></p>
+          <a href="../home.html"> mygrowingpains.com</a></p>
     </footer>
-  </div>    
+</div>      
 <!--******************************************FOOTER END****************************************************-->
   
-  <script>
+<script>
   //****************** NAVBAR SCROLL FUNCTION **************************//
   const navEl = document.querySelector('.navbar');
   
@@ -285,5 +285,6 @@
     document.documentElement.scrollTop = 0;
   }
 </script>
+
 </body>
 </html>
