--- a/SelfCare/mental.html
+++ b/SelfCare/mental.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Website Title and Logo-->
-	  <title>Bank Accounts</title>
+	  <title>Mental Health</title>
 
     <!-- Links for Content Design-->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" >
@@ -113,118 +113,126 @@
         <div class="row gx-4 gx-lg-5 justify-content-center font-one-two">
 
                 <p>
-                    Most people open their bank accounts around the age of 16, with the assistance of their parents.
-                    Typically, I’d assume around this time, we are getting our first ever job, so we need somewhere to store that money. 
+                    There have been days where I have been so at my wits end, that I didn’t know what to do with myself. 
+                    It wasn’t until I hit my breaking point that my body and mind forced me to take a break. I sought out professional
+                     help and was able to find ways to handle my stress and anxiety. 
                 </p>
                 <p>
-                    Bank accounts store our money and can sometimes make us more based on how you go about it.
-                    The convenient thing about the United States is that each state has many banks. From nationwide bank franchises,
-                    like Wells Fargo or Chase, to local banks that you can find around any corner. It seems we are never short of options,
-                    so do your research on the banks near you, read reviews, and choose which one you want. 
+                    The National Institute of Mental Health categorizes mental health as taking care of your 
+                    emotional, psychological, and social well-being. 
                 </p>
                 <p>
-                    There are four types of bank accounts:  
+                    So, how can you take care of your mental health?
                 </p>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">1. Checking accounts</li>
-                    <li class="list-group-item">2. Savings Accounts</li>
-                    <li class="list-group-item">3. Money Market Accounts</li>
-                    <li class="list-group-item">4. Certificate of Deposit Accounts</li>
+                    <li class="list-group-item">1. Improve and Maintain a Good Sleep Schedule</li>
+                    <li class="list-group-item">2. Find a Support Group</li>
+                    <li class="list-group-item">3. Regulate Your Stress</li>
+                    <li class="list-group-item">4. Seek Professional Health</li>
+                    <li class="list-group-item">5. Take Care of Your Physical Health</li>
+                </ul>
+                <img src="../images/mental-img.jpg" alt="anatomy of check">
+
+            <h2 class="section-heading"><br>Improve and Maintain a Good Sleep Schedule</h2>
+                <p>
+                    For me, when I am dealing with a big transition and need to rearrange my sleep schedule,
+                    this is what I do. I set a bedtime. In addition to that, I set a timer for an hour before my
+                    bedtime, also called my wind down time. 
+                </p>
+                <p>
+                    During this time, I do my nighttime routine, brew some chamomile, or mint tea, and
+                    relax in bed before it’s time to go to bed. This is to physically force myself to relax.
+                    I read a news article or a chapter of a book (preferably a horror novel, don’t judge me), and I settle down and go to bed 
+                </p>
+                <p>
+                    In the first two weeks of my transition, I wake up to my alarm and keep doing so until my body instinctively
+                    wakes itself up at that time. I find that even when I go to bed a little later than my routine, 
+                    I’ll still wake up around my set time. 
+                </p>
+                <p>
+                    If you wish you to try my method of maintaining a good sleep schedule, by all means, it’s pretty simple. 
+                </p>
+                
+
+            <h2 class="section-heading"><br>Find a Support Group</h2>
+
+                <p>
+                    I believe most journeys in the world can be done alone, but when it comes to your mental health, 
+                    it doesn’t hurt to rely on someone. 
+                </p>
+                <p>
+                    If you do not have an immediate support group, find one! Now, trust me, I know it’s easier said than done,
+                    but there are activities out there that can help you find friends. If you are a student in college, find a
+                    local time, reach out to your classmates, go to events. Even if you aren’t in college, go start a hobby. 
+                    There are quirky events out there that you can sign up for and meet great people.  
+                </p>
+                <p>
+                    It is important to understand that you should never compromise your values or well-being in  order to befriend someone.
+                    If someone is making you feel uncomfortable and unsafe, do your best to remove yourself from that situation.
+                    Always trust your gut and choose people that make you feel safe.
+                </p>
+
+            <h2 class="section-heading"><br>Regulate Your Stress</h2>
+
+                <p>
+                    Did you know stress can affect not only your mental health, but your <a href="../SelfCare/physical.html">physical health</a>
+                    as well? It’s a scary beast that can <a href="https://www.ctpublic.org/news/2022-01-04/chronic-stress-can-reduce-lifespan-says-recent-yale-study">shorten</a> your lifespan. Don’t let it.  
+                </p>
+                <p>
+                    One of my biggest challenges is stress. I am prone to it. To the point where I get stress-induced illnesses, 
+                    so I have no choice but to find a way to regulate it. There are various methods to do so (I’ve tried a lot), but here are a few:  
+                </p>
+                <ul>
+                    <li style="margin-left: 50px;">Go for a 30 min walk/run</li>
+                    <li style="margin-left: 50px;">Take a nap (my personal favorite)</li>
+                    <li style="margin-left: 50px;">Get a treat</li>
+                    <li style="margin-left: 50px;">Clean your room</li>
+                    <li style="margin-left: 50px;">Watch a funny, relaxing, god-tier show (Bob’s Burgers)</li>
+                    <li style="margin-left: 50px;">Take a bubble bath</li>
                 </ul>
                 <p>
-                    Let’s go in depth with each of these accounts.
+                    All of these methods I have tried and loved, and I am proud to admit they have worked successfully for me. 
+                    Depending on my circumstances, I’ll change it up a bit or combine some. Nevertheless, choose whatever makes 
+                    you relax. When you are done relaxing, try returning to the task that was stressing you out, I bet you’ll 
+                    feel motivated and ready to tackle it again.
                 </p>
 
-            <h2 class="section-heading">Checking Accounts</h2>
-                <p>
-                    Did you know there were different types of checking accounts that a person can open? 
-                    There are more than four, but the most commonly used one is the standard checking account.
-                </p>
-                <p>
-                    The standard checking account is a deposit account that often comes with characteristics such as access to an ATM, 
-                    online banking, a debit card, and even access to a check book.
-                    It allows you to deposit, transfer and withdraw funds. 
-                </p>
-                <p>
-                    Now look, checks are not an archaic practice. For big purchases, some companies require checks, so do not skip 
-                    learning how to write and read a check. 
-                </p>
-                <p>
-                    Look at this image below to better understand the anatomy of a check. 
-                </p>
-                <img src="../images/check-finance.jpg" alt="anatomy of check">
-
-            <h2 class="section-heading"><br>Savings Accounts</h2>
+            <h2 class="section-heading"><br>Seek Professional Help</h2>
 
                 <p>
-                    So, you have a checking account, good, now it’s time to meet checking accounts best friend: the savings account.
-                    In your checking account, you are storing money that can easily be taken out, put in, etc., but what about the
-                    money that you don’t necessarily need to spend right away? A savings account is where you are going to store all the money
-                    that you will need for emergencies or future big purchases you are saving for. 
+                    Sometimes, there are mental health issues that are beyond your control. Some mental health
+                    issues can be debilitating and can cause strain and disruption in your life. This is when you should most definitely seek professional health.  
                 </p>
                 <p>
-                    Money can be deposited in this account via online transfers, in the bank, or via checks deposits. The great thing about 
-                    savings accounts is that you can actually make money with them through the concept of compounding interest.  
+                    There are some mental health struggles that I can handle myself, but as I am not a mental health specialist,
+                    I lean on my therapist to help me out. They are able to help me find  a solution.  
                 </p>
                 <p>
-                    Say you initially put $2,000 in your savings account. Each month, for 25 years, you plan on putting $200 in there every month.
-                    You also have an interest rate of 5%. In 25 years, you will make over $120,000 dollars.
-                    That’s the beauty of compound interest. 
+                    At times, if therapy isn’t enough, there are psychiatrists that specialize in helping you find the right medical concoction to get you right. 
+                    I know it can be scary, but don’t worry, it’s okay! Give it a try and know what works for some might not work for you.
+                </p>
+                <p>
+                    Work with your provider to find the best solution for you.
                 </p>
 
-            <h2 class="section-heading"><br>Money Market Accounts</h2>
+            <h2 class="section-heading"><br>Take Care of Your Physical Health</h2>
 
                 <p>
-                    Unlike the standard savings accounts, money market accounts pay higher interest and are a little less flexible
-                    when it comes to transactions. Always speak with your bank and make sure you are aware of their stipulations.  
+                    Whether it’s finding 30 minutes out of your day to go for a walk, or time to eat a healthy, hearty meal,
+                    taking care of your physical health is closely tied to your mental health. 
                 </p>
                 <p>
-                    Some of the disadvantages of money market accounts is they may have tougher restrictions on withdrawals and may
-                    require a larger deposit, however, can  be highly beneficial to you as well. Some of the advantages of money market 
-                    accounts include safety and security because they can be FDIC insured, depending on the bank, and due to higher interest, can get you higher returns.  
+                    Take a look at our <a href="../SelfCare/physical.html">physical health</a> section to understand more about how you can live a healthy lifestyle.  
                 </p>
-
-            <h2 class="section-heading"><br>Certificate of Deposit Accounts</h2>
-
-                <p>
-                    A Certificate of Deposit, also known as a CD, is a length-based special savings account where you are generally unable to 
-                    make any withdrawals for a certain period of time.  
-                </p>
-                <p>
-                    Say in 3 years, you plan to make a big purchase, so you decide to buy a CD. You put down an initial deposit of $50,000
-                    on a CD with an interest rate of 4.5%. Within the 3 years, you will have made roughly $57,000.   
-                </p>
-                <p>
-                    Certificates of Deposit are also protected by the Federal Deposit Insurance Corporation (FDIC) and can be insured for up to $250,000.
-                </p>
-
-            <h2 class="section-heading">Opening a Bank Account</h2>
-
-                <p>
-                    Now that you know about each of these accounts, how can you get started? 
-                </p>
-                <p>
-                    Let’s first understand what you need to start a bank account. You need:  
-                </p>
-                <ul style="margin-left: 150px;">
-                    <li>Your Social Security Number (SSN)</li>
-                    <li>A government-issued photo ID</li>
-                        <ul>
-                            <li>An ID</li>
-                            <li>A passport</li>
-                            <li>A driver's license</li>
-                        </ul>
-                    <li>Money Market Accounts</li>
-                </ul>
 
             <h2 class="section-heading">Conclusion</h2>
 
                 <p>
-                    Make sure you have all the necessary information and materials before you waltz into a bank.
-                    Don’t just go into one thinking you can deposit whatever and start whatever.
+                    In short, your mental health is important. There are many ways to take care of yourself, so, find the right mix for you and do what’s best for you. 
+                    Remember that a lot of this is trial and error. It took me a while to get to where I wanted to be mentally, but the journey was eye opening. 
                 </p>   
                 <p>
-                    Banks have specialists that can help you decide what is best for you, so make sure to utilize all of your resources.
+                    I learned a lot about myself, and I hope you can too.
                 </p>
             <br>
             <br>
@@ -240,7 +248,7 @@
 </div>
 <!--****************************************** MAIN CONTENT END ****************************************************-->
 <br>
-<br>
+<br> 
 <br>
 <!--******************************************FOOTER BEGIN**************************************************-->
 <div class="container-fluid" style="background-color: #f89421; font-family: 'Montserrat', serif;">
