--- a/SelfCare/personalstyle.html
+++ b/SelfCare/personalstyle.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Website Title and Logo-->
-	  <title>Bank Accounts</title>
+	  <title>Personal Style</title>
 
     <!-- Links for Content Design-->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" >
@@ -79,15 +79,15 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
+                    <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                     <div class="dropdown-content">
-                        <a href="#">Relationships</a>
-                        <a href="#">Friendships</a>
-                        <a href="#">Social Etiquette</a>
-                        <a href="#">Social Media</a>
+                        <a href="../SocialLife/relationship.html">Relationships</a>
+                        <a href="../SocialLife/friendships.html">Friendships</a>
+                        <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                        <a href="../SocialLife/socialmedia.html">Social Media</a>
                     </div>
                 </li>
-                <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+                <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
             </ul>
             </div>
         </div>
@@ -106,125 +106,88 @@
                
     <!---------------------------------- Post Content--------------------------------------------->
     <article class="container col-xs-12 col-sm-12 col-md-10 col-lg-10" style="font-family: 'Montserrat', sans-serif; font-size:35px;">
-        <h1 class="display-1">How Bank Accounts Work</h1>
+        <h1 class="display-1">A Personal Style That's All You</h1>
         <p style="font-size: 16px;"><b>May 01, 2024</b></p> 
         <p style="font-size: 15px;"><i>By My Growing Pains</i></p> 
         <br>
         <div class="row gx-4 gx-lg-5 justify-content-center font-one-two">
 
                 <p>
-                    Most people open their bank accounts around the age of 16, with the assistance of their parents.
-                    Typically, I’d assume around this time, we are getting our first ever job, so we need somewhere to store that money. 
+                    In this day and age, we are being bombarded with never-ending trends. One thing we are lacking is a sense of self 
+                    as well as a sense of personal style. Out of fear of being bullied or judged, we conform, but how happy are we truly? 
+                    Probably not the happiest.
+                </p>
+                <p>                    
+                    There was a period of time in my life where I felt I had no choice but to dress like my peers in order to fit it in the workplace.
+                    I was just so down and disappointed. I then realized that we all are going to die one day, so who cares. Since then, I have decided
+                    to dress however I wanted, and have developed my personal style. 
                 </p>
                 <p>
-                    Bank accounts store our money and can sometimes make us more based on how you go about it.
-                    The convenient thing about the United States is that each state has many banks. From nationwide bank franchises,
-                    like Wells Fargo or Chase, to local banks that you can find around any corner. It seems we are never short of options,
-                    so do your research on the banks near you, read reviews, and choose which one you want. 
+                    My confidence in myself is now impenetrable. 
                 </p>
                 <p>
-                    There are four types of bank accounts:  
+                    Here’s how you can develop your own personal style:  
                 </p>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">1. Checking accounts</li>
-                    <li class="list-group-item">2. Savings Accounts</li>
-                    <li class="list-group-item">3. Money Market Accounts</li>
-                    <li class="list-group-item">4. Certificate of Deposit Accounts</li>
+                    <li class="list-group-item">1. Don’t stick to one style</li>
+                    <li class="list-group-item">2. Utilize your social media for inspiration </li>
+                    <li class="list-group-item">3. Learn about color theory</li>
                 </ul>
+
+            <h2 class="section-heading">Don’t stick to one style</h2>
                 <p>
-                    Let’s go in depth with each of these accounts.
+                    Full disclosure, I do not have one style. I have many styles and it all depends on how 
+                    I am feeling, where I am going, and what the weather is going to be like. 
+                </p>
+                <p>
+                    While there are those who choose to wear one style, from goth to beige-millennial,
+                    there are also those who have a multitude of styles. For instance, there are days where I am summoning this energy… 
+                </p>
+                <img src="../images/fashion-one-img.jpg" alt="fashion">
+                <p>
+                    <br>And somedays I summon this energy...
+                </p>
+                <img src="../images/fashion-two-img.jpg" alt="fashion">
+                <p>
+                    <br>Does this make me less me? NO! In fact, both styles are me, just in different ways. Don’t feel like you need to look one way forever. 
+                    As we grow old, our tastes change, so don’t hesitate to change with them. 
                 </p>
 
-            <h2 class="section-heading">Checking Accounts</h2>
-                <p>
-                    Did you know there were different types of checking accounts that a person can open? 
-                    There are more than four, but the most commonly used one is the standard checking account.
-                </p>
-                <p>
-                    The standard checking account is a deposit account that often comes with characteristics such as access to an ATM, 
-                    online banking, a debit card, and even access to a check book.
-                    It allows you to deposit, transfer and withdraw funds. 
-                </p>
-                <p>
-                    Now look, checks are not an archaic practice. For big purchases, some companies require checks, so do not skip 
-                    learning how to write and read a check. 
-                </p>
-                <p>
-                    Look at this image below to better understand the anatomy of a check. 
-                </p>
-                <img src="../images/check-finance.jpg" alt="anatomy of check">
-
-            <h2 class="section-heading"><br>Savings Accounts</h2>
+            <h2 class="section-heading"><br>Utilize your social media for inspiration</h2>
 
                 <p>
-                    So, you have a checking account, good, now it’s time to meet checking accounts best friend: the savings account.
-                    In your checking account, you are storing money that can easily be taken out, put in, etc., but what about the
-                    money that you don’t necessarily need to spend right away? A savings account is where you are going to store all the money
-                    that you will need for emergencies or future big purchases you are saving for. 
+                    Pinterest is the love of my life. I have a fashion board that has 8 sections. One of my wind down activities is 
+                    browsing Pinterest for 30 minutes and so adding to my board and sections. It’s fun because it gives me tons of 
+                    ideas that I can apply to my sense of style. While I may not agree with some choices, I’ll take bits and pieces
+                    from a look and use them for inspiration.
                 </p>
                 <p>
-                    Money can be deposited in this account via online transfers, in the bank, or via checks deposits. The great thing about 
-                    savings accounts is that you can actually make money with them through the concept of compounding interest.  
-                </p>
-                <p>
-                    Say you initially put $2,000 in your savings account. Each month, for 25 years, you plan on putting $200 in there every month.
-                    You also have an interest rate of 5%. In 25 years, you will make over $120,000 dollars.
-                    That’s the beauty of compound interest. 
+                    This is not to be confused with taking someone else’s style. I personally believe there is one style that belongs 
+                    to someone, it’s good to share ideas, especially with clothing.   
                 </p>
 
-            <h2 class="section-heading"><br>Money Market Accounts</h2>
+            <h2 class="section-heading"><br>Learn about color theory</h2>
 
+                <img src="../images/color-img.jpg" alt="anatomy of check">
                 <p>
-                    Unlike the standard savings accounts, money market accounts pay higher interest and are a little less flexible
-                    when it comes to transactions. Always speak with your bank and make sure you are aware of their stipulations.  
+                    Color theory is the study of how color affects our emotions and how these colors work off of each other.  
                 </p>
                 <p>
-                    Some of the disadvantages of money market accounts is they may have tougher restrictions on withdrawals and may
-                    require a larger deposit, however, can  be highly beneficial to you as well. Some of the advantages of money market 
-                    accounts include safety and security because they can be FDIC insured, depending on the bank, and due to higher interest, can get you higher returns.  
-                </p>
-
-            <h2 class="section-heading"><br>Certificate of Deposit Accounts</h2>
-
-                <p>
-                    A Certificate of Deposit, also known as a CD, is a length-based special savings account where you are generally unable to 
-                    make any withdrawals for a certain period of time.  
+                    For example, white and purple are colors that are associated with wealth and royalty, respectively.
+                    On the other hand, green and blues are harmonious colors that represent tranquility and growth.  
                 </p>
                 <p>
-                    Say in 3 years, you plan to make a big purchase, so you decide to buy a CD. You put down an initial deposit of $50,000
-                    on a CD with an interest rate of 4.5%. Within the 3 years, you will have made roughly $57,000.   
+                    You can utilize this theory to decide your outfits. You can wear color with intention and meaning. 
                 </p>
-                <p>
-                    Certificates of Deposit are also protected by the Federal Deposit Insurance Corporation (FDIC) and can be insured for up to $250,000.
-                </p>
-
-            <h2 class="section-heading">Opening a Bank Account</h2>
-
-                <p>
-                    Now that you know about each of these accounts, how can you get started? 
-                </p>
-                <p>
-                    Let’s first understand what you need to start a bank account. You need:  
-                </p>
-                <ul style="margin-left: 150px;">
-                    <li>Your Social Security Number (SSN)</li>
-                    <li>A government-issued photo ID</li>
-                        <ul>
-                            <li>An ID</li>
-                            <li>A passport</li>
-                            <li>A driver's license</li>
-                        </ul>
-                    <li>Money Market Accounts</li>
-                </ul>
 
             <h2 class="section-heading">Conclusion</h2>
 
                 <p>
-                    Make sure you have all the necessary information and materials before you waltz into a bank.
-                    Don’t just go into one thinking you can deposit whatever and start whatever.
+                    No matter what you choose to wear, don’t ever let anyone make you feel bad for what you wear. It’s no one’s business but yours.
+                    Of course, don’t go out there doing something illegal. 
                 </p>   
                 <p>
-                    Banks have specialists that can help you decide what is best for you, so make sure to utilize all of your resources.
+                    Whether you choose to wear mixed-matching colors or patterns, or you favor monotoned clothes, as long as it’s you, that’s all that matters.
                 </p>
             <br>
             <br>
@@ -301,3 +264,4 @@
 
 </body>
 </html>
+ 
