--- a/about.html
+++ b/about.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -54,45 +55,38 @@
                   <li class="dropdown nav-item">
                       <a class="dropbtn" href="../Website/HouseKeeping/housekeeping.html"><span class="glyphicon"></span>HOUSEKEEPING</a>
                       <div class="dropdown-content">
-                          <a href="#">Daily</a>
-                          <a href="#">Weekly</a>
-                          <a href="#">Monthly</a>
+                          <a href="../Website/HouseKeeping/daily.html">Daily</a>
+                          <a href="../Website/HouseKeeping/weekly.html">Weekly</a>
+                          <a href="../Website/HouseKeeping/monthly.html">Monthly</a>
                       </div>
                   </li>
-                  <li class="dropdown nav-item">
-                      <a class="dropbtn" href="../Website/Finance/finance.html"><span class="glyphicon"></span>FINANCE</a>
-                      <div class="dropdown-content">
-                          <a href="#msg" class="nav-link">Insurance</a>
-                          <div id="msg" class="nav-submenu">
-                              <a href="#" class="nav-submenu-link">Car</a>
-                              <a href="#" class="nav-submenu-link">Health</a>
-                              <a href="#" class="nav-submenu-link">Dental</a>
-                              <a href="#" class="nav-submenu-link">Life</a>
-                          </div>
-                          <a href="#">Budgeting</a>
-                          <a href="#">Renting or Buying?</a>
-                          <a href="#">Bank Accounts</a>
-                          <a href="#">Taxes</a>
-                          <a href="#">Investing</a>
-                      </div>
+                  <li class="dropdown">
+                    <a class="dropbtn" href="../Website/Finance/finance.html"><span class="glyphicon"></span>FINANCE</a>
+                    <div class="dropdown-content">
+                        <a href="../Website/Finance/bankaccount.html">Bank Accounts</a>
+                        <a href="../Website/Finance/budgeting.html">Budgeting</a>
+                        <a href="../Website/Finance/insurance.html">Insurance</a>                        
+                        <a href="../Website/Finance/renting.html">Rent & Buy</a>                        
+                        <a href="../Website/Finance/taxes.html">Taxes</a>
+                    </div>
                   </li>
                   <li class="dropdown">
                       <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
                       <div class="dropdown-content">
-                          <a href="#">Mental</a>
-                          <a href="#">Physical</a>
-                          <a href="#">Personal Style</a>
-                          <a href="#">Hygiene</a>
-                          <a href="#">Resources</a>
+                          <a href="../Website/SelfCare/mental.html">Mental</a>
+                          <a href="../Website/SelfCare/physical.html">Physical</a>
+                          <a href="../Website/SelfCare/personalstyle.html">Personal Style</a>
+                          <a href="../Website/SelfCare/hygiene.html">Hygiene</a>
+                          <a href="../Website/SelfCare/resources.html">Resources</a>
                       </div>
                   </li>
                   <li class="dropdown">
                       <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                       <div class="dropdown-content">
-                          <a href="#">Relationships</a>
-                          <a href="#">Friendships</a>
-                          <a href="#">Social Etiquette</a>
-                          <a href="#">Social Media</a>
+                          <a href="../Website/SocialLife/relationship.html">Relationships</a>
+                          <a href="../Website/SocialLife/friendships.html">Friendships</a>
+                          <a href="../Website/SocialLife/etiquette.html">Social Etiquette</a>
+                          <a href="../Website/SocialLife/socialmedia.html">Social Media</a>
                       </div>
                   </li>
                   <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
@@ -116,16 +110,18 @@
           <br><br>
           <p style="font-size: 15px;">
             When I was 19, I left the comfort of my parents' home to challenge their statement that adulthood was a difficult and never-ending journey.
-            One that would test every fiber of your being. Simply put, I was delusional and stubborn and just could not believe it was that hard. Then, it hit me. I don't know how to file taxes. A couch is how much? What do you mean by "4-oh-1-K"? Interest raes are how high? 
+            One that would test every fiber of your being. Simply put, I was delusional and stubborn and just could not believe it was that hard. 
+            Then, it hit me. I don't know how to file taxes. A couch is how much? What do you mean by "4-oh-1-K"? Interest rates are how high? 
             Needless to say, I had a rude awakening.
             <br><br>
             It wasn't my parents fault that I didn't know these things, they had told me many times, I just didn't care to listen. 
-            (To my parents, I am sorry and you were right hope this makes it up it you! :) ) 
+            (To my parents, I am sorry and you were right hope this makes it up it you! :)  
             <br><br>          
             As I went down a rabbit hole trying to figure out how to navigate these new challeneges, I realized that I was not alone.
             I learned that no one knew what they were doing. That's how <strong style="color: #f89421;">My Growing Pains</strong> came to fruition!
             <br><br>
-            My Growing Pains is for individuals who are struggling to adjust to adulthood. It is expected for our parents to be the ones to guide us through this process, but there are some parents out there who themselves do not know what they are doing.
+            My Growing Pains is for young adults who are struggling to adjust to adulthood. It is expected for our parents to be the ones to guide us through this process, 
+            but there are some parents out there who themselves do not know what they are doing.
             You know what? That's okay! My Growing pains is here to end that cycle of not knowing and give you a go-to guide that you can use to at least understand the basics.
             <br><br>
             <em>Let's get through this together! </em>
@@ -156,12 +152,12 @@
       <div class="col-sm-4">
         <span class="glyphicon glyphicon-heart logo-small"></span>
         <h4 class="text-white">DIVERSITY</h4>
-        <p>We strive to learn from different opinions, cultures, and lifestyles.</p>
+        <p>I strive to learn from different opinions, cultures, and lifestyles.</p>
       </div>
       <div class="col-sm-4">
         <span class="glyphicon glyphicon-lock logo-small"></span>
         <h4 class="text-white">HONESTY</h4>
-        <p>We value being upfront and transparent as this creates an open and ernest atmosphere.</p>
+        <p>I value being upfront and transparent as this creates an open and ernest atmosphere.</p>
       </div>
     </div>
     <br><br>
@@ -174,12 +170,12 @@
       <div class="col-sm-4">
         <span class="glyphicon glyphicon-certificate logo-small"></span>
         <h4 class="text-white">COURAGE</h4>
-        <p>We have to take a leap in order to become the people we want to be.</p>
+        <p>You have to take a leap in order to become the people we want to be.</p>
       </div>
       <div class="col-sm-4">
         <span class="glyphicon glyphicon-wrench logo-small"></span>
         <h4 class="text-white">HARD WORK</h4>
-        <p>Work hard, play hard! (Don't worry, we believe in rest as well)</p>
+        <p>Work hard, play hard! (Don't worry, I believe in rest as well)</p>
       </div>
     </div>
   </div>
@@ -193,16 +189,16 @@
 <div class="container-fluid" style="background-color: #f89421; font-family: 'Montserrat', serif;">
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-white">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
+      <li class="nav-item"><a href="../Website/home.html" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
+      <li class="nav-item"><a href="../Website/about.html" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
+      <li class="nav-item"><a href="../Website/HouseKeeping/housekeeping.html" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
+      <li class="nav-item"><a href="../Website/Finance/finance.html" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
+      <li class="nav-item"><a href="../Website/SelfCare/selfcare.html" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
+      <li class="nav-item"><a href="../Website/SocialLife/sociallife.html" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
+      <li class="nav-item"><a href="../Website/contact.html" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
     </ul>
     <p class="text-center text-white">&copy; 2024 Copyright: 
-        <a href="home.html"> mygrowingpains.com</a></p>
+        <a href="../Website/home.html"> mygrowingpains.com</a></p>
   </footer>
 </div>    
 <!--******************************************FOOTER END****************************************************-->
