--- a/Finance/bankaccount.html
+++ b/Finance/bankaccount.html
@@ -29,7 +29,7 @@
 <!--**************************************BACK TO TOP BUTTON BEGIN***********************************************--> 
 <button type="button" class="btn btn-floating btn-lg" id="btn-back-to-top" style="background-color: #1b1363; box-shadow: inset;">
     <i class="fa-solid fa-arrow-up-from-bracket" style="color: white;"></i>
-</button>
+</button> 
 <!--**************************************BACK TO TOP BUTTON END***********************************************--> 
 
 <!--**************************************NAVIGATION BAR & HERO BEGIN***********************************************--> 
@@ -59,35 +59,35 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Finance/finance.html"><span class="glyphicon"></span>FINANCE</a>
+                  <a class="dropbtn" href="../Finance/finance.html"><span class="glyphicon"></span>FINANCE</a>
+                  <div class="dropdown-content">
+                      <a href="../Finance/bankaccount.html">Bank Accounts</a>
+                      <a href="../Finance/budgeting.html">Budgeting</a>
+                      <a href="../Finance/insurance.html">Insurance</a>                        
+                      <a href="../Finance/renting.html">Rent & Buy</a>                        
+                      <a href="../Finance/taxes.html">Taxes</a>
+                  </div>
+                </li>
+                <li class="dropdown">
+                    <a class="dropbtn" href="../SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
                     <div class="dropdown-content">
-                        <a href="../Finance/bankaccount.html">Bank Accounts</a>
-                        <a href="../Finance/budgeting.html">Budgeting</a>
-                        <a href="../Finance/insurance.html">Insurance</a>                        
-                        <a href="../Finance/renting.html">Rent & Buy</a>                        
-                        <a href="../Finance/taxes.html">Taxes</a>
+                        <a href="../SelfCare/mental.html">Mental</a>
+                        <a href="../SelfCare/physical.html">Physical</a>
+                        <a href="../SelfCare/personalstyle.html">Personal Style</a>
+                        <a href="../SelfCare/hygiene.html">Hygiene</a>
+                        <a href="../SelfCare/resources.html">Resources</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
+                    <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                     <div class="dropdown-content">
-                        <a href="#">Mental</a>
-                        <a href="#">Physical</a>
-                        <a href="#">Personal Style</a>
-                        <a href="#">Hygiene</a>
-                        <a href="#">Resources</a>
+                        <a href="../SocialLife/relationship.html">Relationships</a>
+                        <a href="../SocialLife/friendships.html">Friendships</a>
+                        <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                        <a href="../SocialLife/socialmedia.html">Social Media</a>
                     </div>
                 </li>
-                <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
-                    <div class="dropdown-content">
-                        <a href="#">Relationships</a>
-                        <a href="#">Friendships</a>
-                        <a href="#">Social Etiquette</a>
-                        <a href="#">Social Media</a>
-                    </div>
-                </li>
-                <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+                <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
             </ul>
             </div>
         </div>
@@ -260,7 +260,7 @@
   </div>    
 <!--******************************************FOOTER END****************************************************-->
   
-  <script>
+<script>
   //****************** NAVBAR SCROLL FUNCTION **************************//
   const navEl = document.querySelector('.navbar');
   
