--- a/HouseKeeping/weekly.html
+++ b/HouseKeeping/weekly.html
@@ -4,25 +4,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Website Title and Logo-->
-	  <title>My Growing Pains</title>
+    <!------------------------------- Website Title and Logo -------------------------->
+	  <title>Weekly Tasks</title>
 
-    <!-- Links for Content Design-->
+    <!----------------------------- Links for Content Design -------------------------->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" >
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <link rel="shortcut icon" href="../images/GPLogo.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="images/GPLogo.ico" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="../css/general.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <!-- Links for Content Funtionality and Icons-->  
+    <!---------------------------- Links for Content Funtionality and Icons------------>  
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.rawgit.com/afeld/bootstrap-toc/v1.0.1/dist/bootstrap-toc.min.js"></script>
         <script src="https://kit.fontawesome.com/92e37675b9.js" crossorigin="anonymous"></script>
 </head>
+
 <body data-bs-spy="scroll" data-bs-target="#toc">
 
 <!--**************************************BACK TO TOP BUTTON BEGIN***********************************************--> 
@@ -30,7 +31,7 @@
     <i class="fa-solid fa-arrow-up-from-bracket" style="color: white;"></i>
 </button>
 <!--**************************************BACK TO TOP BUTTON END***********************************************--> 
-
+ 
 <!--**************************************NAVIGATION BAR & HERO BEGIN***********************************************--> 
 <div class="parallax-two">
     <img class="img-responsive" src="../images/weekly.png" alt="background image">      
@@ -68,25 +69,25 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
+                    <a class="dropbtn" href="../SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
                     <div class="dropdown-content">
-                        <a href="#">Mental</a>
-                        <a href="#">Physical</a>
-                        <a href="#">Personal Style</a>
-                        <a href="#">Hygiene</a>
-                        <a href="#">Resources</a>
+                        <a href="../SelfCare/mental.html">Mental</a>
+                        <a href="../SelfCare/physical.html">Physical</a>
+                        <a href="../SelfCare/personalstyle.html">Personal Style</a>
+                        <a href="../SelfCare/hygiene.html">Hygiene</a>
+                        <a href="../SelfCare/resources.html">Resources</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
+                    <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                     <div class="dropdown-content">
-                        <a href="#">Relationships</a>
-                        <a href="#">Friendships</a>
-                        <a href="#">Social Etiquette</a>
-                        <a href="#">Social Media</a>
+                        <a href="../SocialLife/relationship.html">Relationships</a>
+                        <a href="../SocialLife/friendships.html">Friendships</a>
+                        <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                        <a href="../SocialLife/socialmedia.html">Social Media</a>
                     </div>
                 </li>
-                <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+                <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
             </ul>
             </div>
         </div>
@@ -191,7 +192,8 @@
 
             <h2 class="section-heading">Meal Plan</h2>
 
-                <p>I hate cooking sometimes. And I know you do too. It can be tedious as hell, but we need to eat. It’s so easy to just go to the fast food restaurant and get a big mac, but your wallet can’t afford to keep doing that. Plan our your meals! There are a ton of great<link> meal plan ideas out there. </p>
+                <p>I hate cooking sometimes. And I know you do too. It can be tedious as hell, but we need to eat. It’s so easy to just go to the fast food restaurant and get a big mac,
+                     but your wallet can’t afford to keep doing that. Plan our your meals! There are a ton of great<link> meal plan ideas out there. </p>
                 <p>Here are some of my favorites: </p>
                 <ul style="margin-left: 75px;">
                     <li><a href=" https://www.eatingwell.com/category/4287/meal-planning-101/">Eating Well</a></li>
@@ -231,21 +233,21 @@
 <div class="container-fluid" style="background-color: #f89421; font-family: 'Montserrat', serif;">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-white">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
+        <li class="nav-item"><a href="../home.html" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
+        <li class="nav-item"><a href="../about.html" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
+        <li class="nav-item"><a href="../HouseKeeping/housekeeping.html" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
+        <li class="nav-item"><a href="../Finance/finance.html" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
+        <li class="nav-item"><a href="../SelfCare/selfcare.html" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
+        <li class="nav-item"><a href="../SocialLife/sociallife.html" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
+        <li class="nav-item"><a href="../contact.html" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
       </ul>
       <p class="text-center text-white">&copy; 2024 Copyright: 
-          <a href="home.html"> mygrowingpains.com</a></p>
+          <a href="../home.html"> mygrowingpains.com</a></p>
     </footer>
-  </div>    
+</div>      
 <!--******************************************FOOTER END****************************************************-->
   
-  <script>
+<script>
   //****************** NAVBAR SCROLL FUNCTION **************************//
   const navEl = document.querySelector('.navbar');
   
@@ -283,5 +285,6 @@
     document.documentElement.scrollTop = 0;
   }
 </script>
+
 </body>
 </html>
