--- a/SelfCare/physical.html
+++ b/SelfCare/physical.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Website Title and Logo-->
-	  <title>Bank Accounts</title>
+	  <title>Physical Health</title>
 
     <!-- Links for Content Design-->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" >
@@ -79,15 +79,15 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
+                    <a class="dropbtn" href="../SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
                     <div class="dropdown-content">
-                        <a href="#">Relationships</a>
-                        <a href="#">Friendships</a>
-                        <a href="#">Social Etiquette</a>
-                        <a href="#">Social Media</a>
+                        <a href="../SocialLife/relationship.html">Relationships</a>
+                        <a href="../SocialLife/friendships.html">Friendships</a>
+                        <a href="../SocialLife/etiquette.html">Social Etiquette</a>
+                        <a href="../SocialLife/socialmedia.html">Social Media</a>
                     </div>
                 </li>
-                <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+                <li style="background-color: #ec7263;" class="rounded-4"><a href="../contact.html"><span class="glyphicon"></span>CONTACT</a></li>
             </ul>
             </div>
         </div>
@@ -106,125 +106,124 @@
                
     <!---------------------------------- Post Content--------------------------------------------->
     <article class="container col-xs-12 col-sm-12 col-md-10 col-lg-10" style="font-family: 'Montserrat', sans-serif; font-size:35px;">
-        <h1 class="display-1">How Bank Accounts Work</h1>
+        <h1 class="display-1">It's Your Body, Take Care Of It</h1>
         <p style="font-size: 16px;"><b>May 01, 2024</b></p> 
         <p style="font-size: 15px;"><i>By My Growing Pains</i></p> 
         <br>
         <div class="row gx-4 gx-lg-5 justify-content-center font-one-two">
 
                 <p>
-                    Most people open their bank accounts around the age of 16, with the assistance of their parents.
-                    Typically, I’d assume around this time, we are getting our first ever job, so we need somewhere to store that money. 
+                    I’ll be honest, taking care of your physical health is a lifelong commitment.
+                    Unfortunately, you can’t just work out and eat right for a couple of months, get fit and then decide to never do that again.
+                    That’s not how that works. 
                 </p>
                 <p>
-                    Bank accounts store our money and can sometimes make us more based on how you go about it.
-                    The convenient thing about the United States is that each state has many banks. From nationwide bank franchises,
-                    like Wells Fargo or Chase, to local banks that you can find around any corner. It seems we are never short of options,
-                    so do your research on the banks near you, read reviews, and choose which one you want. 
+                    Your body is always changing, so you are often tasked with adjusting your routine and lifestyle to fit said changes.
                 </p>
                 <p>
-                    There are four types of bank accounts:  
+                    Here is how you can take care of your physical health: 
                 </p>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">1. Checking accounts</li>
-                    <li class="list-group-item">2. Savings Accounts</li>
-                    <li class="list-group-item">3. Money Market Accounts</li>
-                    <li class="list-group-item">4. Certificate of Deposit Accounts</li>
+                    <li class="list-group-item">1. Stay Hydrated</li>
+                    <li class="list-group-item">2. Be in Motion</li>
+                    <li class="list-group-item">3. Eat nutritious meals</li>
+                    <li class="list-group-item">4. Sleep and Sleep some more</li>
+                    <li class="list-group-item">5. Beware of Substances</li>
+                    <li class="list-group-item">6. Take a Break</li>
                 </ul>
+                <img src="../images/physical-img.jpg" alt="anatomy of check">
+
+            <h2 class="section-heading"><br>Stay Hydrated</h2>
                 <p>
-                    Let’s go in depth with each of these accounts.
+                    Did you know what your body can completely break down and just stop working if you choose to stop drinking liquids, 
+                    specifically water? It’s not a pretty look, your body will completely change, and it won’t take years for it to happen either.
+                    Drink your water. 
+                </p>
+                <p>
+                    I am a person that used to struggle with drinking water, so I completely resonate with those of you who do as well.
+                    It wasn’t until I had an unexpected ER visit that caused me to drink more water. To this day I carry some form of water with me.
+                    So, how’d I do it? 
+                </p>
+                <p>
+                    I hate the bland taste of water, it’s odd to me, but put a lemon slice or two in there and I’m sold.
+                    Not to mention lemon water has its own benefits. In addition to this, I started setting a timer for each hour on my smart
+                    watch where I would drink a generous amount of water. I also had a water bottle with time stamps on it that assisted with this.
+                    As this became the norm, I stopped  using my timers and just reaped the benefits of water. 
                 </p>
 
-            <h2 class="section-heading">Checking Accounts</h2>
-                <p>
-                    Did you know there were different types of checking accounts that a person can open? 
-                    There are more than four, but the most commonly used one is the standard checking account.
-                </p>
-                <p>
-                    The standard checking account is a deposit account that often comes with characteristics such as access to an ATM, 
-                    online banking, a debit card, and even access to a check book.
-                    It allows you to deposit, transfer and withdraw funds. 
-                </p>
-                <p>
-                    Now look, checks are not an archaic practice. For big purchases, some companies require checks, so do not skip 
-                    learning how to write and read a check. 
-                </p>
-                <p>
-                    Look at this image below to better understand the anatomy of a check. 
-                </p>
-                <img src="../images/check-finance.jpg" alt="anatomy of check">
-
-            <h2 class="section-heading"><br>Savings Accounts</h2>
+            <h2 class="section-heading"><br>Be in Motion</h2>
 
                 <p>
-                    So, you have a checking account, good, now it’s time to meet checking accounts best friend: the savings account.
-                    In your checking account, you are storing money that can easily be taken out, put in, etc., but what about the
-                    money that you don’t necessarily need to spend right away? A savings account is where you are going to store all the money
-                    that you will need for emergencies or future big purchases you are saving for. 
+                    Staying active comes in many forms. Personally, I hate exercising, specifically weight lifting. The burn isn’t for everyone. 
+                    But! I love speedwalking and running. Cardio is much more fun for me than weight lifting. It really depends on your physical health goals. 
                 </p>
                 <p>
-                    Money can be deposited in this account via online transfers, in the bank, or via checks deposits. The great thing about 
-                    savings accounts is that you can actually make money with them through the concept of compounding interest.  
-                </p>
-                <p>
-                    Say you initially put $2,000 in your savings account. Each month, for 25 years, you plan on putting $200 in there every month.
-                    You also have an interest rate of 5%. In 25 years, you will make over $120,000 dollars.
-                    That’s the beauty of compound interest. 
+                    I understand there are individuals out there who have a difficult time being physically active, but there are plenty of workouts that 
+                    you can do from the comfort of your bed, home, or chair. As long as you are able to move about, you can ensure great health.  
                 </p>
 
-            <h2 class="section-heading"><br>Money Market Accounts</h2>
+            <h2 class="section-heading"><br>Eat Nutritious Meals</h2>
 
                 <p>
-                    Unlike the standard savings accounts, money market accounts pay higher interest and are a little less flexible
-                    when it comes to transactions. Always speak with your bank and make sure you are aware of their stipulations.  
+                    Look, I love a good chick-fil-a sandwich as much as the next person. However, eating that every single day would not do great
+                    things for my body. I would be sluggish and sleepy all the time, not to mention, bloated. No thanks. Don’t get me wrong, though, 
+                    I can and will treat myself at least once a month.  
                 </p>
                 <p>
-                    Some of the disadvantages of money market accounts is they may have tougher restrictions on withdrawals and may
-                    require a larger deposit, however, can  be highly beneficial to you as well. Some of the advantages of money market 
-                    accounts include safety and security because they can be FDIC insured, depending on the bank, and due to higher interest, can get you higher returns.  
+                    In the United States, people’s relationship with food can be quite troubling. I used to be someone who used food for comfort,
+                    and I paid the price for it, but now, I understand that food is a source of energy.   
+                </p>
+                <p>
+                    You don’t have to overwhelm yourself counting calories and weighing your food. As long as you are getting your vegetables,
+                    fruit, grains, carbs, and most importantly, protein in, you should be good. For a more in-depth look, reach out to a dietician
+                    or your provider as they can help you create a plan that’s just for you.     
                 </p>
 
-            <h2 class="section-heading"><br>Certificate of Deposit Accounts</h2>
+            <h2 class="section-heading"><br>Sleep and Sleep Some More</h2>
 
                 <p>
-                    A Certificate of Deposit, also known as a CD, is a length-based special savings account where you are generally unable to 
-                    make any withdrawals for a certain period of time.  
+                    Imagine constantly being awake. No rest, just constantly on. Oh, the horror. 
                 </p>
                 <p>
-                    Say in 3 years, you plan to make a big purchase, so you decide to buy a CD. You put down an initial deposit of $50,000
-                    on a CD with an interest rate of 4.5%. Within the 3 years, you will have made roughly $57,000.   
+                    Check out this video on what would happen if you stopped sleeping.   
                 </p>
+                <iframe width="420" height="500" src="https://youtube.com/embed/dqONk48l5vY?si=0KUx1KCW97Y6WhhB"></iframe>
                 <p>
-                    Certificates of Deposit are also protected by the Federal Deposit Insurance Corporation (FDIC) and can be insured for up to $250,000.
+                    <br>As mentioned in the <a href="../SelfCare/mental.html">mental health</a> section, sleep is integral to your overall health.
+                    If you are working out, how can your body have time to heal? 7-8 hours of sleep is necessary for our bodies to function so create
+                    a schedule and stay on it.
                 </p>
 
-            <h2 class="section-heading">Opening a Bank Account</h2>
+            <h2 class="section-heading"><br>Beware of Substances</h2>
 
                 <p>
-                    Now that you know about each of these accounts, how can you get started? 
+                    We all have those times when we want to unwind and go out for a drink with our friends, 
+                    but too much of anything is a bad thing. Drink in moderation and avoid hard substances.  
                 </p>
                 <p>
-                    Let’s first understand what you need to start a bank account. You need:  
+                    If you are struggling with substance abuse, please look at our resources and seek professional help.   
                 </p>
-                <ul style="margin-left: 150px;">
-                    <li>Your Social Security Number (SSN)</li>
-                    <li>A government-issued photo ID</li>
-                        <ul>
-                            <li>An ID</li>
-                            <li>A passport</li>
-                            <li>A driver's license</li>
-                        </ul>
-                    <li>Money Market Accounts</li>
-                </ul>
+
+            <h2 class="section-heading"><br>Take a Break</h2>
+
+                <p>
+                    You can be the healthiest and hardest working person on the planet, but if you do not take a break, you will struggle.
+                    There is no shame in saying, “hey, I need to stop, step away, and relax.”   
+                </p>
+                <p>
+                    There are people who die from overworking. Don’t shorten your lifespan for anything. Do something relaxing and take a break.  
+                </p>
+         
 
             <h2 class="section-heading">Conclusion</h2>
 
                 <p>
-                    Make sure you have all the necessary information and materials before you waltz into a bank.
-                    Don’t just go into one thinking you can deposit whatever and start whatever.
+                    Our bodies are not made out of stone. Taking care of our physical health can affect the way we function.
+                    If you want to be fatigued and sluggish all the time, ignore your physical health, but if you want to be
+                    the best version of you, try to take good care of yourself. 
                 </p>   
                 <p>
-                    Banks have specialists that can help you decide what is best for you, so make sure to utilize all of your resources.
+                    I see it like this, you wake up in your body and go to sleep in your body, isn’t it best to treat it well? 
                 </p>
             <br>
             <br>
@@ -301,3 +300,4 @@
 
 </body>
 </html>
+ 
