--- a/SelfCare/selfcare.html
+++ b/SelfCare/selfcare.html
@@ -216,7 +216,7 @@
     </div>
 </div>
 <!--**************************************SELFCARE FEATURES CARDS END*************************************************--> 
-
+ 
 
 <!--******************************************FOOTER BEGIN**************************************************-->
 <div class="container-fluid" style="background-color: #f89421; font-family: 'Montserrat', serif;">
@@ -231,7 +231,7 @@
       <li class="nav-item"><a href="../contact.html" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
     </ul>
     <p class="text-center text-white">&copy; 2024 Copyright: 
-        <a href="home.html"> mygrowingpains.com</a></p>
+        <a href="../home.html"> mygrowingpains.com</a></p>
   </footer>
 </div>    
 <!--******************************************FOOTER END****************************************************-->
