--- a/contact.html
+++ b/contact.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Website Title and Logo-->
-	  <title> Growing Pains</title>
+    <!------------------------------ Website Title and Logo-------------------------->
+	  <title> Contact Us</title>
 
-    <!-- Links for Content Design-->
+    <!------------------------------ Links for Content Design ----------------------->
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" >
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
         <link rel="shortcut icon" href="images/GPLogo.ico" type="image/x-icon" />
@@ -16,7 +16,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <!-- Links for Content Funtionality and Icons-->  
+    <!----------------------------- Links for Content Funtionality and Icons--------------->  
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" crossorigin="anonymous"></script>        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
@@ -37,56 +37,49 @@
             </div>            
             <div class="collapse navbar-collapse" id="myNavbar">  
             <div style="font-size: 20px;">
-                <a class="navbar-brand"  href="home.html"><b>HOME</b></a>
+                <a class="navbar-brand"  href="../Website/home.html"><b>HOME</b></a>
             </div>              
             <ul class="nav navbar-nav navbar-right" style="display: inline-block !important;">
-                <li><a href="about.html"><span class="glyphicon"></span>ABOUT</a></li>
-                <li class="dropdown nav-item">
-                    <a class="dropbtn" href="../Website/HouseKeeping/housekeeping.html"><span class="glyphicon"></span>HOUSEKEEPING</a>
-                    <div class="dropdown-content">
-                        <a href="#">Daily</a>
-                        <a href="#">Weekly</a>
-                        <a href="#">Monthly</a>
-                    </div>
-                </li>
-                <li class="dropdown nav-item">
-                    <a class="dropbtn" href="../Website/Finance/finance.html"><span class="glyphicon"></span>FINANCE</a>
-                    <div class="dropdown-content">
-                        <a href="#msg" class="nav-link">Insurance</a>
-                        <div id="msg" class="nav-submenu">
-                            <a href="#" class="nav-submenu-link">Car</a>
-                            <a href="#" class="nav-submenu-link">Health</a>
-                            <a href="#" class="nav-submenu-link">Dental</a>
-                            <a href="#" class="nav-submenu-link">Life</a>
-                        </div>
-                        <a href="#">Budgeting</a>
-                        <a href="#">Renting or Buying?</a>
-                        <a href="#">Bank Accounts</a>
-                        <a href="#">Taxes</a>
-                        <a href="#">Investing</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
-                    <div class="dropdown-content">
-                        <a href="#">Mental</a>
-                        <a href="#">Physical</a>
-                        <a href="#">Personal Style</a>
-                        <a href="#">Hygiene</a>
-                        <a href="#">Resources</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
-                    <div class="dropdown-content">
-                        <a href="#">Relationships</a>
-                        <a href="#">Friendships</a>
-                        <a href="#">Social Etiquette</a>
-                        <a href="#">Social Media</a>
-                    </div>
-                </li>
-                <li style="background-color: #ec7263;" class="rounded-4"><a href="contact.html"><span class="glyphicon"></span>CONTACT</a></li>
-            </ul>
+              <li><a href="../Website/about.html"><span class="glyphicon"></span>ABOUT</a></li>
+              <li class="dropdown nav-item">
+                  <a class="dropbtn" href="../Website/HouseKeeping/housekeeping.html"><span class="glyphicon"></span>HOUSEKEEPING</a>
+                  <div class="dropdown-content">
+                      <a href="../Website/HouseKeeping/daily.html">Daily</a>
+                      <a href="../Website/HouseKeeping/weekly.html">Weekly</a>
+                      <a href="../Website/HouseKeeping/monthly.html">Monthly</a>
+                  </div>
+              </li>
+              <li class="dropdown">
+                  <a class="dropbtn" href="../Website/Finance/finance.html"><span class="glyphicon"></span>FINANCE</a>
+                  <div class="dropdown-content">
+                      <a href="../Website/Finance/bankaccount.html">Bank Accounts</a>
+                      <a href="../Website/Finance/budgeting.html">Budgeting</a>
+                      <a href="../Website/Finance/insurance.html">Insurance</a>                        
+                      <a href="../Website/Finance/renting.html">Rent & Buy</a>                        
+                      <a href="../Website/Finance/taxes.html">Taxes</a>
+                  </div>
+              </li>
+              <li class="dropdown">
+                  <a class="dropbtn" href="../Website/SelfCare/selfcare.html"><span class="glyphicon"></span>SELF-CARE</a>
+                  <div class="dropdown-content">
+                      <a href="../Website/SelfCare/mental.html">Mental</a>
+                      <a href="../Website/SelfCare/physical.html">Physical</a>
+                      <a href="../Website/SelfCare/personalstyle.html">Personal Style</a>
+                      <a href="../Website/SelfCare/hygiene.html">Hygiene</a>
+                      <a href="../Website/SelfCare/resources.html">Resources</a>
+                  </div>
+              </li>
+              <li class="dropdown">
+                  <a class="dropbtn" href="../Website/SocialLife/sociallife.html"><span class="glyphicon"></span>SOCIAL LIFE</a>
+                  <div class="dropdown-content">
+                      <a href="../Website/SocialLife/relationship.html">Relationships</a>
+                      <a href="../Website/SocialLife/friendships.html">Friendships</a>
+                      <a href="../Website/SocialLife/etiquette.html">Social Etiquette</a>
+                      <a href="../Website/SocialLife/socialmedia.html">Social Media</a>
+                  </div>
+              </li>
+              <li style="background-color: #ec7263;" class="rounded-4"><a href="../Website/contact.html"><span class="glyphicon"></span>CONTACT</a></li>
+          </ul>
             </div>
         </div>
     </nav> 
@@ -94,29 +87,37 @@
 <!--**************************************NAVIGATION BAR & HERO END*************************************************--> 
 
 <!--**************************************CONTACT FORM BEGIN********************************************************-->
-    <div class="container footer-flex" style="width: 50%;">
+    <div class="container footer-flex py-5" style="width: 75%;">
     <br>
     <br>
-      <div class="wrapper ">
-        <form class="form">
-          <div class="pageTitle title">
+      <div class="wrapper">
+        <form class="form" action="https://formsubmit.co/doreenchirwa2000@gmail.com" method="POST">
+          <div class="pageTitle title" style="letter-spacing: 7px;">
             Contact Us
           </div>
-          <div class="secondaryTitle title">
-            Please fill this form to sign up.
-          </div>
-          <div class="row">
-            <div class="col">
-              <input type="text" class="name formEntry" placeholder="Name" />
+            <div class="secondaryTitle title">
+              Have questions? Reach out! All fields must be entered to submit message.
             </div>
-            <div class="col">
-              <input type="text" class="email formEntry" placeholder="Email"/>
-            </div>
-          </div>
-          
-          <input type="text" class="email formEntry" placeholder="Email"/>
-          <textarea class="message formEntry" placeholder="Message"></textarea>
-          <button class="submit formEntry" onclick="thanks()">Submit</button>
+            <br>
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="first-name">First Name</label>
+                  <input id="first-name" name="first-name" type="text" class="f-name formEntry" placeholder="First Name" required/>
+                </div>
+                <div class="form-group">
+                  <label for="last-name">Last Name</label>
+                  <input id="last-name" name="last-name" type="text" class="l-name formEntry" placeholder="Last Name" required />
+                </div>
+              </div> 
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="email">Email</label>
+                  <input id="email" name="email" type="text" class="email e-formEntry" placeholder="Email" required/>
+                </div>
+              </div>   
+            <label for="message">Message</label>                 
+            <textarea id="message" name="message" class="message m-formEntry" placeholder="Message" style="margin-top: 11px;" required></textarea>
+          <button type="submit" class="submit s-formEntry" onclick="thanks()">Submit</button>
         </form>
       </div>
     <br>
@@ -128,16 +129,16 @@
   <div class="container-fluid" style="background-color: #f89421; font-family: 'Montserrat', serif;">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3 text-white">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
+        <li class="nav-item"><a href="../Website/home.html" class="nav-link px-2 text-body-secondary"><b>HOME</b></a></li>
+        <li class="nav-item"><a href="../Website/about.html" class="nav-link px-2 text-body-secondary">ABOUT</a></li>
+        <li class="nav-item"><a href="../Website/HouseKeeping/housekeeping.html" class="nav-link px-2 text-body-secondary">HOUSEKEEPING</a></li>
+        <li class="nav-item"><a href="../Website/Finance/finance.html" class="nav-link px-2 text-body-secondary">FINANCE</a></li>
+        <li class="nav-item"><a href="../Website/SelfCare/selfcare.html" class="nav-link px-2 text-body-secondary">SELF-CARE</a></li>
+        <li class="nav-item"><a href="../Website/SocialLife/sociallife.html" class="nav-link px-2 text-body-secondary">SOCIAL LIFE</a></li>
+        <li class="nav-item"><a href="../Website/SocialLife/sociallife.html" class="nav-link px-2 text-body-secondary">CONTACT</a></li>
       </ul>
       <p class="text-center text-white">&copy; 2024 Copyright: 
-          <a href="home.html"> mygrowingpains.com</a></p>
+          <a href="../Website/home.html"> mygrowingpains.com</a></p>
     </footer>
   </div>    
 <!--******************************************FOOTER END************************************************************-->
